# typer_test

./: README.md  pyproject.toml
src/typer_test/: __init__.py  __main__.py  main.py
tests/: test_main.py
