[tool.poetry]
name = "typer-test"
version = "0.1.0"
description = ""
authors = ["Ethan Skowronski-Lutz <33399972+ethanmsl@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "typer_test", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
pyright = "^1.1.281"
black = "^22.10.0"
pytest = "^7.2.0"
pdoc = "^12.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = [".venv",
    "src/experimental",
    "src/typestubs",
  "**/__pycache__"
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = true

executionEnvironments = [
  { root = "src" }
]

# [tool.pylint]
# disable = [
#     "R0903",  # Too few public methods
# ]

[tool.pytest.ini_options]
# adds the following paths to pythonpath, specified relative to root dir
pythonpath = [
    "src",
]
